[gd_scene load_steps=62 format=3 uid="uid://c4powvhisya70"]

[ext_resource type="Script" path="res://scripts/ParallaxBackground.gd" id="1_dlo46"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ds4a7"]
[ext_resource type="Texture2D" uid="uid://83bvnh4u6a4i" path="res://assets/ui_component/demo01_PixelSky_layer01.png" id="1_v0ce2"]
[ext_resource type="Shader" path="res://shaders/Text.gdshader" id="2_1td5r"]
[ext_resource type="Texture2D" uid="uid://cg8v3uok5l6cp" path="res://assets/ui_component/demo01_PixelSky_layer02.png" id="2_umry0"]
[ext_resource type="Texture2D" uid="uid://dfsks5eonhg35" path="res://assets/ui_component/demo01_PixelSky_layer03.png" id="3_usnpb"]
[ext_resource type="FontFile" uid="uid://dbabuksdpx333" path="res://assets/fonts/BACKTO1982.TTF" id="3_xb6eb"]
[ext_resource type="Texture2D" uid="uid://dakmrow0wlwch" path="res://assets/ui_component/ParallaxForeGround-removebg.png" id="4_3ein7"]
[ext_resource type="FontFile" uid="uid://dv1b0itpdjj42" path="res://assets/fonts/PeaberryBase.ttf" id="4_wpqj7"]
[ext_resource type="Texture2D" uid="uid://diqqat2gwxtf4" path="res://assets/ui_component/Buttons.png" id="5_41bi4"]
[ext_resource type="Texture2D" uid="uid://bw2d64b56rg4p" path="res://assets/frogs/ToxicFrogGreenBlue_Idle.png" id="5_j8dpf"]
[ext_resource type="Script" path="res://scripts/ui_button.gd" id="6_5ofpg"]
[ext_resource type="Texture2D" uid="uid://cept3b3b51qpu" path="res://assets/frogs/BlueBlue/ToxicFrogBlueBlue_Hop.png" id="6_jvqbi"]
[ext_resource type="Texture2D" uid="uid://c6m2vbu08mtis" path="res://assets/frogs/BlueBrown/ToxicFrogBlueBrown_Idle.png" id="7_eww5t"]
[ext_resource type="Texture2D" uid="uid://cgwupadr5mpdx" path="res://assets/frogs/PurpleBlue/ToxicFrogPurpleBlue_Attack.png" id="9_skw4p"]
[ext_resource type="Texture2D" uid="uid://d03dac6bvknk" path="res://assets/frogs/PurpleBlue/ToxicFrogPurpleBlue_Idle.png" id="10_sy1qx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ly8r6"]
atlas = ExtResource("6_jvqbi")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r8pm"]
atlas = ExtResource("6_jvqbi")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1glmk"]
atlas = ExtResource("6_jvqbi")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0plf"]
atlas = ExtResource("6_jvqbi")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr4tw"]
atlas = ExtResource("6_jvqbi")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_phcu3"]
atlas = ExtResource("6_jvqbi")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_57o76"]
atlas = ExtResource("6_jvqbi")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyxqc"]
atlas = ExtResource("7_eww5t")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjysg"]
atlas = ExtResource("7_eww5t")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bswnf"]
atlas = ExtResource("7_eww5t")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsmq2"]
atlas = ExtResource("7_eww5t")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w7bk"]
atlas = ExtResource("7_eww5t")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwj0h"]
atlas = ExtResource("7_eww5t")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4jpo"]
atlas = ExtResource("7_eww5t")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sswyr"]
atlas = ExtResource("7_eww5t")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtr2j"]
atlas = ExtResource("5_j8dpf")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dblpa"]
atlas = ExtResource("5_j8dpf")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiw4n"]
atlas = ExtResource("5_j8dpf")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nlyp"]
atlas = ExtResource("5_j8dpf")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb67c"]
atlas = ExtResource("5_j8dpf")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6a3y"]
atlas = ExtResource("5_j8dpf")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkx0"]
atlas = ExtResource("5_j8dpf")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nc2e"]
atlas = ExtResource("5_j8dpf")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1fk"]
atlas = ExtResource("9_skw4p")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ith02"]
atlas = ExtResource("9_skw4p")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdumx"]
atlas = ExtResource("9_skw4p")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaagk"]
atlas = ExtResource("9_skw4p")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kraa7"]
atlas = ExtResource("9_skw4p")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gebg"]
atlas = ExtResource("9_skw4p")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8jpo"]
atlas = ExtResource("10_sy1qx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh17u"]
atlas = ExtResource("10_sy1qx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2kl5"]
atlas = ExtResource("10_sy1qx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t37l0"]
atlas = ExtResource("10_sy1qx")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n63q6"]
atlas = ExtResource("10_sy1qx")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fki1y"]
atlas = ExtResource("10_sy1qx")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtbel"]
atlas = ExtResource("10_sy1qx")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b62kd"]
atlas = ExtResource("10_sy1qx")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_uynbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly8r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r8pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1glmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0plf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr4tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phcu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57o76")
}],
"loop": true,
"name": &"BlueFrogHop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyxqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjysg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bswnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsmq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w7bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwj0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4jpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sswyr")
}],
"loop": true,
"name": &"BlueFrogIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtr2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dblpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiw4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nlyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb67c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6a3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nc2e")
}],
"loop": true,
"name": &"GreenFrog",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ith02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdumx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaagk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kraa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gebg")
}],
"loop": true,
"name": &"PurpleFrogAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8jpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh17u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2kl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t37l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n63q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fki1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtbel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b62kd")
}],
"loop": true,
"name": &"PurpleFrogIdle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vhcqp"]
shader = ExtResource("2_1td5r")
shader_parameter/frequency = 3.0
shader_parameter/height = 4.0
shader_parameter/speed = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jpkrh"]
shader = ExtResource("2_1td5r")
shader_parameter/frequency = 1.0
shader_parameter/height = 2.0
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sgkxc"]
texture = ExtResource("5_41bi4")
region_rect = Rect2(15, 13, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hdhqv"]
texture = ExtResource("5_41bi4")
region_rect = Rect2(15, 61, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3i3qr"]
texture = ExtResource("5_41bi4")
region_rect = Rect2(15, 109, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oeua3"]
texture = ExtResource("5_41bi4")
region_rect = Rect2(15, 61, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nkvwc"]
texture = ExtResource("5_41bi4")
region_rect = Rect2(15, 61, 81, 26)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ds4a7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
script = ExtResource("1_dlo46")

[node name="SkyLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1200, 0)

[node name="Sky" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/SkyLayer"]
position = Vector2(551, 272)
scale = Vector2(5, 5)
texture = ExtResource("1_v0ce2")
metadata/_edit_lock_ = true

[node name="BackCloudLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2(1200, 0)

[node name="BackCloud" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/BackCloudLayer"]
position = Vector2(548, 286)
scale = Vector2(5, 5)
texture = ExtResource("2_umry0")
metadata/_edit_lock_ = true

[node name="ForeGroundSky" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1200, 0)

[node name="ForeGroundSky" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ForeGroundSky"]
position = Vector2(548, 244)
scale = Vector2(5, 5)
texture = ExtResource("3_usnpb")

[node name="ForeGround" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(576, 432)
scale = Vector2(0.563, 0.563)
texture = ExtResource("4_3ein7")

[node name="Frog" type="AnimatedSprite2D" parent="CanvasLayer"]
self_modulate = Color(0.686275, 0.686275, 0.686275, 1)
position = Vector2(512, 570)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_uynbv")
animation = &"GreenFrog"
autoplay = "GreenFrog"
frame_progress = 0.652827

[node name="Frog2" type="AnimatedSprite2D" parent="CanvasLayer"]
self_modulate = Color(0.639216, 0.639216, 0.639216, 1)
position = Vector2(584, 582)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_uynbv")
animation = &"BlueFrogIdle"
autoplay = "BlueFrogIdle"
flip_h = true

[node name="Frog5" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(450, 627)
scale = Vector2(1.9, 1.9)
sprite_frames = SubResource("SpriteFrames_uynbv")
animation = &"PurpleFrogIdle"
autoplay = "PurpleFrogIdle"
flip_h = true

[node name="Frog3" type="AnimatedSprite2D" parent="CanvasLayer"]
self_modulate = Color(0.854902, 0.854902, 0.854902, 1)
position = Vector2(430, 588)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_uynbv")
animation = &"PurpleFrogIdle"
autoplay = "PurpleFrogIdle"
frame_progress = 0.256447
flip_h = true

[node name="Frog4" type="AnimatedSprite2D" parent="CanvasLayer"]
self_modulate = Color(0.560784, 0.560784, 0.560784, 1)
position = Vector2(622, 565)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_uynbv")
animation = &"BlueFrogHop"
autoplay = "BlueFrogHop"
frame_progress = 0.303134

[node name="GameLabel" type="Label" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_vhcqp")
offset_left = 321.0
offset_top = 32.0
offset_right = 805.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("3_xb6eb")
theme_override_font_sizes/font_size = 32
text = "Find Linea The Frog"

[node name="PlayButton" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 30.0
offset_top = 524.0
offset_right = 228.0
offset_bottom = 583.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "Play"
script = ExtResource("6_5ofpg")

[node name="LevelsButton" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 30.0
offset_top = 563.0
offset_right = 228.0
offset_bottom = 622.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "Levels"
script = ExtResource("6_5ofpg")

[node name="SpinWheelButton" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 961.0
offset_top = 552.0
offset_right = 1287.0
offset_bottom = 629.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "Test Your Luck"
script = ExtResource("6_5ofpg")

[node name="eFrogs" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 959.0
offset_top = 506.0
offset_right = 1285.0
offset_bottom = 583.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "eFrogs"
script = ExtResource("6_5ofpg")

[node name="tCROAK_Faucet" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 963.0
offset_top = 599.0
offset_right = 1289.0
offset_bottom = 676.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "tCROAK Faucet"
script = ExtResource("6_5ofpg")

[node name="Quit" type="Button" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jpkrh")
offset_left = 30.0
offset_top = 599.0
offset_right = 228.0
offset_bottom = 658.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("4_wpqj7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_sgkxc")
theme_override_styles/hover = SubResource("StyleBoxTexture_hdhqv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3i3qr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_oeua3")
theme_override_styles/focus = SubResource("StyleBoxTexture_nkvwc")
text = "Quit"
script = ExtResource("6_5ofpg")

[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SpinWheelButton" to="." method="_on_spin_wheel_button_pressed"]
[connection signal="pressed" from="CanvasLayer/eFrogs" to="." method="_on_e_frogs_pressed"]
[connection signal="pressed" from="CanvasLayer/tCROAK_Faucet" to="." method="_on_t_croak_faucet_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
